--- a/index.html
+++ b/index.html
@@ -3,10 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
+  
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<header>
+  <div class="container">
+    <div>
+      <img src="img/logo.png" alt="" class="logo">
+    </div>
+    <div>
+      <img src="img/search_.png" alt="" class="search">
+      <span class="search">Поиск по сайту</span>
+    </div>
+  
+    <nav>
+      <div class="catalog">
 
-  </body>
+     <a href="#">Каталог товаров</a>
+       </div>
+    
+      <div class="container_right">
+        <ul>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+  </nav>
+  </div>
+</header>
+
+
+
+<section>
+  <div class="container">Самая длинная палка для селфи доступна в нашем магазине.
+    Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+    </div>
+</section>
+
+<section>
+  <div class="container"></div>
+</section>
+
+<section>
+  <div class="container"></div>
+</section>
+
+<section>
+  <div class="container">qwerty</div>
+</section>
+
+<footer>
+  <div class="container"></div>
+</footer>
+
 </html>
