--- a/index.html
+++ b/index.html
@@ -14,26 +14,50 @@
     <div>
       <img src="img/logo.png" alt="" class="logo">
     </div>
-    <div>
-      <img src="img/search_.png" alt="" class="search">
-      <span class="search">Поиск по сайту</span>
+
+    <div class="up">
+      <div class="search">
+        <img src="img/search_.png" alt="" class="search">
+        <span class="search_text">Поиск по сайту</span>
+      </div>
+      <div class="menu_up">
+        <div class="container_left">
+          <a href="#"><img src="img/user_.png" alt="" class="user">Войти</a>
+        </div>
+        <div class="container_cart">
+          <ul>
+            <li><a href="#"><img src="img/compare_.png" alt="" class="compare">Сравнить</a></li>
+            <li><a href="#"><img src="img/cart_.png" alt="" class="cart">Корзина</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   
-    <nav>
+    <nav class="clearfix">
       <div class="catalog">
-
-     <a href="#">Каталог товаров</a>
-       </div>
-    
-      <div class="container_right">
-        <ul>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
+        <a href="#">Каталог товаров <img src="img/plus.png" alt="" class="plus"></a>
       </div>
-  </nav>
+      <div class="menu">
+        <div class="container_left">
+          <ul>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+          </ul>
+        </div>
+        <div class="container_right">
+          <ul>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+    </div>
+    </nav>
+
+    <div class="rect"></div>
+
+
   </div>
+
+
 </header>
 
 
