--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
       </div>
     
       <div class="nav-down">
-        <span class="catalogbut" onclick="view('hidden');">
+        <span class="catalogbut" onmouseover="view('hidden');">
           Каталог товаров <img src="img/plus.png" alt="" class="plus">
         </span>
         <div class="menu">
