--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
       <div class="nav-up">
         <div class="search" onclick="search('btn-hidden');">
 
-          <input class="text-search" placeholder="Поиск по сайту"></input>
+          <input class="text-search" placeholder="Поиск по сайту">
           <button type="submit" id="btn-hidden" class="btn-search">Найти</button>
         </div>
         <div class="menu_up">
@@ -168,7 +168,7 @@
                               <span class="checkmark-r"></span>
                             </label>
                             <label class="contain">
-                              <input name="radio-btn" type="radio" value="no" hidden> <p>Нет</p>
+                              <input name="radio-btn" type="radio" value="no" hidden> Нет
                               <span class="checkmark-r"></span>
                             </label>
                             </div>
@@ -203,7 +203,7 @@
                       <span class="item-title-price">
                         
                         <span class="item-title-1">Любительская селфи-палка</span>
-                        <p>500 руб.</p>
+                        <span class="price-1">500 руб.</span>
                       </span>	
                       
                     </div>
@@ -225,7 +225,7 @@
                       </div>
 						<span class="item-title-price">
 							<span class="item-title">Профессиональная селфи-палка</span>
-							<p>1 500 руб.</p>
+							<span class="price-1">1 500 руб.</span>
 						</span>	
 					</div>
                     <div class="item-3">
@@ -246,7 +246,7 @@
                       </div>
 						<span class="item-title-price">
 							<span class="item-title">Непотопляемая селфи-палка</span>
-							<p>2 500 руб.</p>
+							<span class="price-1">2 500 руб.</span>
 						</span>
 					</div>
                     <div class="item-4">
@@ -267,7 +267,7 @@
           </div>
 						<span class="item-title-price">
 							<span class="item-title">Селфи-палка «Следуй за мной»</span>
-							<p>4 900 руб.</p>
+							<span class="price-1">4 900 руб.</span>
 						</span>
 					</div>
 					<div class="backg">
