--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nav-up">
         <div class="search" onclick="search('btn-hidden');">
 
-          <input class="text-search" placeholder="Поиск по сайту"></input>
+          <input class="text-search" placeholder="Поиск по сайту">
           <button type="submit" id="btn-hidden" class="btn-search">Найти</button>
         </div>
         <div class="menu_up">
@@ -57,15 +57,15 @@
       <div id="hidden" class="navhidden">
         <div class="nav-1">
         <a href="#" class="m-1">Виртуальная реальность</a>
-        <a href="#" class="m-2">Моноподы для селфи</a class="m-1">
-        <a href="#" class="m-3">Экшн-камеры</a class="m-1">
+        <a href="#" class="m-2">Моноподы для селфи</a>
+        <a href="#" class="m-3">Экшн-камеры</a>
       </div>
         <div class="nav-2">
-        <a href="#" class="m-4">Фитнес-браслеты</a class="m-1">
-        <a href="#" class="m-5">Умные часы</a class="m-1">
+        <a href="#" class="m-4">Фитнес-браслеты</a>
+        <a href="#" class="m-5">Умные часы</a>
       </div>
       <div class="nav-3">
-        <a href="#" class="m-6">Квадрокоптеры</a class="m-1">
+        <a href="#" class="m-6">Квадрокоптеры</a>
       </div>
     </div>
     </div>
@@ -230,39 +230,40 @@
       <div class="pop-1">
         <div class="col-1">
         <img src="img/popular-1.png" alt=""></div>
-        <div class="col-text-1">Виртуальная реальность</div>
+        <div class="col-text-1"><h2>Виртуальная реальность</h2></div>
       </div>
 
       <div class="pop-2">
         <div class="col-2">
         <img src="img/popular-2.png" alt=""></div>
-        <div class="col-text-2">Моноподы для селфи</div>
+        <div class="col-text-2"><h2>Моноподы для селфи</h2></div>
       </div>
       
       <div class="pop-3">
         <div class="col-3">
         <img src="img/popular-3.png" alt=""></div>
-        <div class="col-text-3">Экшн-камеры</div>
+        <div class="col-text-3"><h2>Экшн-камеры</h2></div>
       </div>
 
       <div class="pop-4">
         <div class="col-4">
         <img src="img/popular-4.png" alt=""></div>
-        <div class="col-text-4">Фитнес-браслеты</div>
+        <div class="col-text-4"><h2>Фитнес-браслеты</h2></div>
       </div>
 
       <div class="pop-5">
         <div class="col-5">
         <img src="img/popular-5.png" alt=""></div>
-        <div class="col-text-5">Умные часы</div>
+        <div class="col-text-5"><h2>Умные часы</h2></div>
       </div>
 
       <div class="pop-6">
         <div class="col-6">
         <img src="img/popular-6.png" alt=""></div>
-        <div class="col-text-6">Квадрокоптеры</div>
+        <div class="col-text-6"><h2>Квадрокоптеры</h2></div>
       </div>
 
+    </div>
     </div>
 </section>
 
@@ -270,21 +271,21 @@
   <div class="deli">
     <div class="del-menu">
       <div>
-      <span class="back-delivery">
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(1)"><div class="current">Доставка</div></div>
         </div>
-      </span>
-      <span class="back-delivery">
+      </div>
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(2)">Гарантия</div>
         </div>
-      </span>
-      <span class="back-delivery">
+      </div>
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(3)">Кредит</div>
         </div>
-      </span>
+      </div>
     </div>
       <div class="del-rect"></div>
     </div>
@@ -298,21 +299,21 @@
   <div class="deli">
     <div class="del-menu">
       <div>
-      <span class="back-delivery">
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(1)">Доставка</div>
         </div>
-      </span>
-      <span class="back-delivery">
+      </div>
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(2)"><div class="current">Гарантия</div></div>
         </div>
-      </span>
-      <span  class="back-delivery">
+      </div>
+      <div  class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(3)">Кредит</div>
         </div>
-      </span>
+      </div>
     </div>
     <div class="del-rect"></div>
     </div>
@@ -328,21 +329,21 @@
   <div class="deli">
     <div class="del-menu">
       <div>
-      <span class="back-delivery">
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(1)">Доставка</div>
         </div>
-      </span>
-      <span class="back-delivery">
+      </div>
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(2)">Гарантия</div>
         </div>
-      </span>
-      <span class="back-delivery">
+      </div>
+      <div class="back-delivery">
         <div class="rect-2">
           <div class="button-d" onclick="currentDeli(3)"><div class="current">Кредит</div></div>
         </div>
-      </span>
+      </div>
     </div>
     <div class="del-rect"></div>
     </div>
@@ -435,7 +436,7 @@
               </div>
             </div>
             <div class="form-mess">Текст письма:
-              <textarea class="mess" type="text" placeholder="В свободной форме"></textarea>
+              <textarea class="mess"  placeholder="В свободной форме"></textarea>
             </div>
             <div class="form-button">
               <a href="#">
